# evaluation_dictee

./: .env.example  .gitignore  CLAUDE.md  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  dictee_gemma4_2stages.yaml  dictee_gemma4_zeroshot.yaml  dictee_qwen3vl_zeroshot.yaml  dictee_qwen72b_fewshot.yaml  dictee_qwen7b_zeroshot.yaml  grille_dictee_2015.json  htr_gemma4_scoledit.yaml  htr_qwen3vl_scoledit.yaml
configs/finetune/: finetune_REFERENCE.yaml
configs/htr/: htr_REFERENCE.yaml
configs/scoring/: dictee_REFERENCE.yaml
docs/: coding_grid.md  decisions.md
notebooks/: 03_analyse_resultats.ipynb  04_diagnostic.ipynb  05_analyse_transcription_htr.ipynb  README.md
scripts/: _generate_notebook_03.py  export_predictions.py  finetune_htr_scoledit.py  run_benchmark.py  run_htr_benchmark.py
src/evaluation_dictee/: __init__.py  cli.py  config.py
src/evaluation_dictee/data/: __init__.py  grid.py  loaders.py  reference.py
src/evaluation_dictee/evaluation/: __init__.py  calibration.py  diagnostics.py  html_report.py  metrics.py  multi_model.py  report.py  results_summary.py  statistics.py  visual_diff.py
src/evaluation_dictee/models/: __init__.py  base.py  factory.py  two_stage.py  vlm.py
src/evaluation_dictee/pipeline/: __init__.py  alignment.py  benchmark.py  prompts.py
src/evaluation_dictee/transcription/: __init__.py  htr_benchmark.py  htr_metrics.py  scoledit.py  visual_diff.py
src/evaluation_dictee/utils/: __init__.py  add_langfuse_models.py  add_langfuse_prompt.py  logging.py  s3_export.py  tracking.py
tests/: test_alignment.py  test_benchmark_concurrency.py  test_benchmark_resume.py  test_calibration.py  test_chain_of_thought.py  test_code_coherence.py  test_codes.py  test_config.py  test_diagnostics.py  test_evaluation_avancee.py  test_grid.py  test_html_report.py  test_htr.py  test_metrics.py  test_multi_model.py  test_results_summary.py  test_retry_transcription.py  test_s3_export.py  test_two_stage.py  test_two_stage_parser.py
website/: _quarto.yml  architecture.qmd  evaluation.qmd  finetuning.qmd  index.qmd  resultats.qmd
