[project]
name = "evaluation-dictee"
version = "0.1.0"
description = "Évaluation automatique de la production d'écrit manuscrite d'élèves par IA (DEPP × SSP Lab)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SSP Lab", email = "innovation@insee.fr" }]

dependencies = [
    # Configuration et validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    # Données et images
    "pillow>=10.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "s3fs>=2024.2",          # accès S3/MinIO du SSP Cloud
    # Appels modèles (vLLM expose une API compatible OpenAI)
    "openai>=1.30",
    "httpx>=0.27",
    # Métriques
    "scikit-learn>=1.4",
    # Suivi d'expériences
    "mlflow>=2.12",
    "langfuse>=2.30",
    # Confort
    "tqdm>=4.66",
    "rich>=13.7",
    "typer>=0.12",           # CLI simple et typée
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "types-pyyaml",
    "pandas-stubs",
]
# Dépendances lourdes, installées seulement sur les machines GPU
gpu = [
    "torch>=2.3",
    "transformers>=4.45",
    "vllm>=0.6",
    "qwen-vl-utils>=0.0.8",
]

[project.scripts]
eval-ecrit = "evaluation_dictee.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation_dictee"]

# ─────────────────────────────────────────────────────────────
# Outils de qualité
# ─────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, N: pep8-naming, UP: pyupgrade,
# B: bugbear, SIM: simplify, D: docstrings (résumé seulement)
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "D"]
ignore = [
    "D100", # docstring manquante au niveau module (toléré)
    "D104", # docstring manquante au niveau package
    "D203", # incompatible avec D211
    "D213", # incompatible avec D212
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]            # pas d'exigence de docstring dans les tests
"notebooks/*" = ["D", "E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true   # certaines libs (vllm) n'ont pas de stubs
disallow_untyped_defs = false   # on assouplit au démarrage

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=evaluation_dictee --cov-report=term-missing"

[tool.coverage.run]
source = ["src/evaluation_dictee"]
